# Assys-Montagehelfer

./: .gitignore  CAMERA-README.md  KEYWORD-README.md  README.md  SPEECH-README.md  app.py  auto_acknowledge.py  auto_acknowledge_camera.py  auto_acknowledge_keyword.py  pyproject.toml  start_camera_control.sh  start_keyword_control.sh  start_with_tmux.sh  test_endpoint.py  test_endpoint.sh
blueprint/: blueprint_router.py  loader.py  render.py
blueprints/: blueprint_0.csv  blueprint_1.csv  blueprint_2.csv  blueprint_3.csv
pick_by_light/: __init__.py  color_helper.py  pick_by_light_controller.py  pick_by_light_router.py
templates/: base.html  blueprint.html  brick_storage.html  control.html  index.html  storage_login.html
